--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,30 @@ main {
     flex: 1 0 auto;
 }
 
+#welcome-img {
+	max-width: 50%;
+}
 
-/*body {
-    background-image: url("../images/nasty-woman-pin.jpeg");
-    background-repeat: repeat;
+#nav-image {
+	max-height: -webkit-fill-available;
+}
+
+.navbar-fixed,
+.nav-wrapper,
+.footer-copyright {
+	background-color: #ee6179;
+}
+
+.page-footer {
+	background-color: #ee6179;
+	text-align: center;
+	bottom: 0;
+  	z-index: 4;
+  	position: sticky;
+}
+
+.my-name {
+	font-family: 'Homemade Apple', cursive;
 }
 
 #quizQuestions {
@@ -22,18 +42,21 @@ main {
 }
 
 #quiz-container {
-	max-width: 700px;
+	/*max-width: 700px;
 	background-color: white;
-	padding: 50px;
+	padding: 50px;*/
+}
+
+.amswers {
+	color: black;
 }
 
 .welcome {
 	font-family: 'Patrick Hand SC', cursive;
-	font-size: 25px;
+	/*font-size: 25px;*/
 }
 
-#button,
-.answers {
+#button {
 	color: #ee6179;
 }
 
@@ -42,4 +65,6 @@ main {
 #correct,
 #wrong {
 	font-family: 'Patrick Hand SC', cursive;
-}*/
+	font-size: large;
+    font-weight: bold;
+}
