--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,9 @@ main {
 	font-family: 'Homemade Apple', cursive;
 }
 
-#quizQuestions {
-	font-size: 30px;
+#quizQuestions,
+h1 {
+	font-size: 35px;
 	font-family: 'Patrick Hand SC', cursive;
 }
 
@@ -47,13 +48,9 @@ main {
 	padding: 50px;*/
 }
 
-.amswers {
-	color: black;
-}
-
 .welcome {
 	font-family: 'Patrick Hand SC', cursive;
-	/*font-size: 25px;*/
+	font-size: 25px;
 }
 
 #button {
