--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,8 @@ main {
 
 .navbar-fixed,
 .nav-wrapper,
-.footer-copyright {
+.footer-copyright,
+.light, .page-footer .footer-copyright {
 	background-color: #ee6179;
 }
 
@@ -36,8 +37,7 @@ main {
 	font-family: 'Homemade Apple', cursive;
 }
 
-#quizQuestions,
-h1 {
+#quizQuestions {
 	font-size: 35px;
 	font-family: 'Patrick Hand SC', cursive;
 }
@@ -50,7 +50,7 @@ h1 {
 
 .welcome {
 	font-family: 'Patrick Hand SC', cursive;
-	font-size: 25px;
+	font-size: 35px;
 }
 
 #button {
